# BattInfoConverter

./: .gitignore  BattInfo_converter.py  LICENSE  README.md  auxiliary.py  excel_tools.py  json_convert.py  json_template.py  pyproject.toml  requirements.txt  setup.py
Excel for reference/: 241125_Battery2030+_CoinCellBattery_Schema_Ontologized_1.0.0_filled.xlsx  250515_241125_Battery2030+_CoinCellBattery_Schema_Ontologized_1.1.2_filled.xlsx  250515_241125_Battery2030+_CoinCellBattery_Schema_Ontologized_1.1.7_empty.xlsx  250515_241125_Battery2030+_CoinCellBattery_Schema_Ontologized_1.1.7_filled.xlsx  250515_241125_Battery2030+_CoinCellBattery_Schema_Ontologized_1.1.8_empty.xlsx  BattINFO_converter_standard_Excel_version_1.1.10.xlsx  BattINFO_converter_standard_Excel_version_1.1.11_empty.xlsx  BattINFO_converter_standard_Excel_version_1.1.11_filled.xlsx  BattINFO_converter_standard_Excel_version_1.1.12_empty.xlsx  BattINFO_converter_standard_Excel_version_1.1.13_empty.xlsx  BattINFO_converter_standard_Excel_version_1.1.13_filled.xlsx  BattINFO_converter_standard_Excel_version_1.1.14_empty.xlsx  BattINFO_converter_standard_Excel_version_1.1.14_filled.xlsx  BattINFO_converter_standard_Excel_version_1.1.9_empty.xlsx  BattINFO_converter_standard_Excel_version_1.1.9_filled.xlsx  BattINFOconverter_CoinCell_template_version_1.1.15_empty.xlsx  BattINFOconverter_CoinCell_template_version_1.1.15_filled.xlsx  Battery2030+_CoinCellBattery_Schema_Ontologized_1.1.2_Empty.xlsx  Copy of 25Nov24_Battery2030+_CoinCellBattery_Schema_Ontologized_plnu.xlsx
battinfoconverter_backend/: __init__.py  auxiliary.py
pages/: 2_Download.py  2_Download_the_Excel_metadata_file.py  3_How_to_fill_the_Excel_metadata_file.py  4_Adapting_for_custom_data.py
test/: BattINFO_converter_BattINFO_converter_standard_JSON_version_1.1.11.json  BattINFO_converter_BattINFO_converter_standard_JSON_version_1.1.13.json  BattINFO_converter_BattINFO_converter_standard_JSON_version_1.1.14.json  BattINFO_converter_BattINFO_converter_standard_JSON_version_1.1.15.json  BattINFO_converter_BattINFO_converter_standard_JSON_version_1.1.9.json  BattINFO_converter_standard_Excel_version_1.1.11.xlsx  BattINFO_converter_standard_Excel_version_1.1.13.xlsx  Standard_Excel.xlsx  (+11 more)
(+8 files in other folders)
