[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "battinfoconverter-backend"
version = "0.1.0"
description = "Backend for BattInfoConverter"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Nukorn Plainpan", email = "nukorn.p27@gmail.com" }]
license = {text = "MIT"}
dependencies = [
  "pandas",
  "openpyxl"
  "simplejson"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["battinfoconverter_backend*"]
