[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "battinfoconverter-backend"
version = "2.1.0"
description = "Backend conversion module for BattInfoConverter"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nukorn Plainpan", email = "nukorn.p27@gmail.com" }]

dependencies = [
  "pandas>=2.0",
  "openpyxl>=3.1",
  "simplejson",
  "tomli"
]

[project.urls]
Homepage = "https://github.com/NukP/BattInfoConverter"
Repository = "https://github.com/NukP/BattInfoConverter"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["battinfoconverter_backend*"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
